...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/matches_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:listitem="@layout/match_card" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <RelativeLayout
        android:id="@+id/matches_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_dark"
        android:gravity="center"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="24dp"
...
